--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1240,6 +1240,9 @@ a {
 .cid-usE5bPQyEs .mbr-text {
   text-align: left;
 }
+.cid-usE5bPQyEs .name {
+  text-align: left;
+}
 .cid-usE8JOEpsx {
   padding-top: 5rem;
   padding-bottom: 5rem;
