--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -142,7 +142,7 @@ body {
   border-radius: 4px;
 }
 .bg-primary {
-  background-color: #9fe870 !important;
+  background-color: #a0e1e1 !important;
 }
 .bg-success {
   background-color: #3a341c !important;
@@ -158,9 +158,9 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #9fe870 !important;
-  border-color: #9fe870 !important;
-  color: #264d0c !important;
+  background-color: #a0e1e1 !important;
+  border-color: #a0e1e1 !important;
+  color: #1f6363 !important;
   box-shadow: none;
 }
 .btn-primary:hover,
@@ -168,15 +168,15 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: inherit;
-  background-color: #bcef9c !important;
-  border-color: #bcef9c !important;
+  background-color: #c7eded !important;
+  border-color: #c7eded !important;
   box-shadow: none;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
-  color: #264d0c !important;
-  background-color: #bcef9c !important;
-  border-color: #bcef9c !important;
+  color: #1f6363 !important;
+  background-color: #c7eded !important;
+  border-color: #c7eded !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -335,23 +335,23 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background-color: transparent !important;
-  border-color: #9fe870;
-  color: #9fe870;
+  border-color: #a0e1e1;
+  color: #a0e1e1;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #6ddc25 !important;
+  color: #5ecccc !important;
   background-color: transparent !important;
-  border-color: #6ddc25 !important;
+  border-color: #5ecccc !important;
   box-shadow: none !important;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
-  color: #264d0c !important;
-  background-color: #9fe870 !important;
-  border-color: #9fe870 !important;
+  color: #1f6363 !important;
+  background-color: #a0e1e1 !important;
+  border-color: #a0e1e1 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -501,7 +501,7 @@ body {
   border-color: #fafafa !important;
 }
 .text-primary {
-  color: #9fe870 !important;
+  color: #a0e1e1 !important;
 }
 .text-secondary {
   color: #ffd7ef !important;
@@ -527,7 +527,7 @@ body {
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
-  color: #66d022 !important;
+  color: #52c9c9 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus,
@@ -578,7 +578,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-position: 0px 1.2em;
 }
 .nav-tabs .nav-link.active {
-  color: #9fe870;
+  color: #a0e1e1;
 }
 .nav-tabs .nav-link:not(.active) {
   color: #232323;
@@ -602,9 +602,9 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #9fe870;
-  border-color: #9fe870;
-  color: #306310;
+  background-color: #a0e1e1;
+  border-color: #a0e1e1;
+  color: #257676;
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
@@ -614,7 +614,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 }
 a,
 a:hover {
-  color: #9fe870;
+  color: #a0e1e1;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
@@ -653,7 +653,7 @@ a:hover {
 .form-control:hover,
 .form-control:focus {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px 0px, rgba(0, 0, 0, 0.07) 0px 1px 3px 0px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
-  border-color: #9fe870 !important;
+  border-color: #a0e1e1 !important;
 }
 .form-control:-webkit-input-placeholder {
   font-family: 'Inter Tight', sans-serif;
@@ -665,7 +665,7 @@ a:hover {
   font-size: 1.75rem;
 }
 blockquote {
-  border-color: #9fe870;
+  border-color: #a0e1e1;
 }
 /* Forms */
 .mbr-form .input-group-btn .btn {
@@ -683,14 +683,14 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #9fe870;
+  background-color: #a0e1e1;
   color: #000000;
 }
 .jq-number__spin {
   transition: 0.25s ease;
 }
 .jq-number__spin:hover {
-  border-color: #9fe870;
+  border-color: #a0e1e1;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -702,14 +702,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #9fe870;
-  border-bottom-color: #9fe870;
+  border-top-color: #a0e1e1;
+  border-bottom-color: #a0e1e1;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #000000 !important;
-  background-color: #9fe870 !important;
+  background-color: #a0e1e1 !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -740,7 +740,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%239fe870' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23a0e1e1' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.5;
@@ -873,7 +873,7 @@ a {
 }
 .cid-usE5gPXLMG .dropdown-item:hover,
 .cid-usE5gPXLMG .dropdown-item:focus {
-  background: #9fe870 !important;
+  background: #a0e1e1 !important;
   color: white !important;
 }
 .cid-usE5gPXLMG .dropdown-item:hover span {
@@ -1243,6 +1243,76 @@ a {
 .cid-usE5bPQyEs .name {
   text-align: left;
 }
+.cid-uunFefWyMO {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #edefeb;
+}
+.cid-uunFefWyMO .mbr-text {
+  color: #000000;
+}
+.cid-uunFefWyMO .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-uunFefWyMO .mbr-section-title {
+  color: #000000;
+  text-align: center;
+}
+.cid-uunFefWyMO .mbr-text,
+.cid-uunFefWyMO .item .mbr-section-btn {
+  text-align: left;
+}
+.cid-uunFefWyMO .item-wrapper {
+  background: #ffffff;
+  margin-bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-uunFefWyMO .item-wrapper {
+    padding: 2rem 1.5rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-uunFefWyMO .item-wrapper {
+    padding: 2.25rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-uunFefWyMO .item-wrapper {
+    padding: 4rem;
+  }
+}
+.cid-uunFefWyMO .counter-container ul {
+  margin: 0;
+  padding-left: 2.25rem;
+  list-style: none;
+}
+.cid-uunFefWyMO .counter-container ul li {
+  position: relative;
+  list-style: none;
+  margin-bottom: 1rem;
+}
+.cid-uunFefWyMO .counter-container ul li:before {
+  position: absolute;
+  left: -1.5em;
+  content: "";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #9fe870;
+  background-color: #9fe870;
+  width: 0.5em;
+  height: 0.5em;
+  top: 0.4em;
+  border-radius: 50%;
+}
+.cid-uunFefWyMO .mbr-text UL {
+  text-align: left;
+}
+.cid-uunFefWyMO .mbr-card-subtitle {
+  color: #232323;
+  text-align: left;
+}
 .cid-usE8JOEpsx {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1290,7 +1360,7 @@ a {
 }
 .cid-usE5gPXLMG .dropdown-item:hover,
 .cid-usE5gPXLMG .dropdown-item:focus {
-  background: #9fe870 !important;
+  background: #a0e1e1 !important;
   color: white !important;
 }
 .cid-usE5gPXLMG .dropdown-item:hover span {
@@ -1710,7 +1780,7 @@ a {
 }
 .cid-usE5gPXLMG .dropdown-item:hover,
 .cid-usE5gPXLMG .dropdown-item:focus {
-  background: #9fe870 !important;
+  background: #a0e1e1 !important;
   color: white !important;
 }
 .cid-usE5gPXLMG .dropdown-item:hover span {
@@ -2192,7 +2262,7 @@ a {
 }
 .cid-usE5gPXLMG .dropdown-item:hover,
 .cid-usE5gPXLMG .dropdown-item:focus {
-  background: #9fe870 !important;
+  background: #a0e1e1 !important;
   color: white !important;
 }
 .cid-usE5gPXLMG .dropdown-item:hover span {
@@ -2606,7 +2676,7 @@ a {
 }
 .cid-usE5gPXLMG .dropdown-item:hover,
 .cid-usE5gPXLMG .dropdown-item:focus {
-  background: #9fe870 !important;
+  background: #a0e1e1 !important;
   color: white !important;
 }
 .cid-usE5gPXLMG .dropdown-item:hover span {
@@ -3042,7 +3112,7 @@ a {
 }
 .cid-usE5gPXLMG .dropdown-item:hover,
 .cid-usE5gPXLMG .dropdown-item:focus {
-  background: #9fe870 !important;
+  background: #a0e1e1 !important;
   color: white !important;
 }
 .cid-usE5gPXLMG .dropdown-item:hover span {
