--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1244,9 +1244,9 @@ a {
   text-align: left;
 }
 .cid-uunFefWyMO {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #edefeb;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
 }
 .cid-uunFefWyMO .mbr-text {
   color: #000000;
@@ -1263,7 +1263,7 @@ a {
   text-align: left;
 }
 .cid-uunFefWyMO .item-wrapper {
-  background: #ffffff;
+  background: #edefeb;
   margin-bottom: 2rem;
 }
 @media (max-width: 767px) {
@@ -1317,6 +1317,12 @@ a {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #ffffff;
+}
+.cid-usSc3d024w {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #a0e1e1;
+  overflow: hidden;
 }
 .cid-usSc3d024w {
   padding-top: 2rem;
